# polyquant

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/superpowers/plans/: 2026-03-15-polyquant-implementation.md
docs/superpowers/specs/: 2026-03-15-polyquant-design.md
src/polyquant/: __init__.py  cli.py  config.py  logging_config.py  utils.py
src/polyquant/data/: binance.py  polymarket.py  store.py
src/polyquant/execution/: backtest.py  live.py  paper.py
src/polyquant/model/: features.py  predictor.py
src/polyquant/strategy/: signal.py  sizing.py
tests/: test_cli.py  test_config.py  test_utils.py
tests/data/: test_binance.py  test_polymarket.py  test_store.py
tests/execution/: test_backtest.py  test_paper.py
tests/model/: test_features.py  test_predictor.py
tests/strategy/: test_signal.py  test_sizing.py
