[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyquant"
version = "0.1.0"
description = "Polymarket BTC/ETH automated trading system"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "py-clob-client>=0.1",
    "lightgbm>=4.0",
    "pandas>=2.0",
    "ta>=0.11",
    "joblib>=1.3",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.28",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
